--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 #--------------------------------#
-# MinigameTemplate by humandavey #
+# MinigameCore by humandavey #
 #--------------------------------#
 
 countdown-seconds: 20
