--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,4 @@ version: '${project.version}'
 main: me.humandavey.minigame.Minigame
 api-version: 1.19
 authors: [ humandavey ]
+softdepend: [ Multiverse-Core ]
