Update build location

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                 <version>3.2.2</version>
                 <configuration>
                     <finalName>${project.name}-${project.version}</finalName>
-                    <outputDirectory>C:\Users\davey\Documents\Programming\Minecraft\Darta Network\plugins</outputDirectory>
+                    <outputDirectory>C:\Users\davey\Documents\Programming\Minecraft\Servers\Darta Network\plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
